--- a/index.html
+++ b/index.html
@@ -597,9 +597,8 @@
 <body>
     <div class="header">
         <div class="logo">
-            <div class="logo-icon">📈</div>
             <div class="logo-text">
-                <h1>TriLayer Quant</h1>
+                <h1>Sticks Trading</h1>
                 <p>Performance Dashboard</p>
             </div>
         </div>
@@ -609,14 +608,13 @@
                 <span id="lastUpdate">Last update: Loading...</span>
             </div>
             <button class="refresh-btn" onclick="loadData()">
-                <span>🔄</span>
                 <span>Refresh</span>
             </button>
         </div>
     </div>
 
     <div class="strategy-selector">
-        <div class="logo-icon" style="width: 20px; height: 20px; font-size: 12px;">📊</div>
+        <div class="logo-icon" style="width: 20px; height: 20px; font-size: 12px;">
         <label>Live Paper Trading</label>
         <select>
             <option>Live Paper Trading</option>
@@ -687,7 +685,7 @@
                 <div class="chart-subtitle">Last update: <span id="positionsUpdate">2026-01-07</span></div>
             </div>
             <div class="cash-info">
-                <span class="cash-label">💵 CASH</span>
+                <span class="cash-label"> CASH</span>
                 <span class="cash-value" id="cashValue">$87,542.33</span>
             </div>
             <div>
