--- a/index.html
+++ b/index.html
@@ -597,6 +597,7 @@
 <body>
     <div class="header">
         <div class="logo">
+            <div class="logo-icon"></div>
             <div class="logo-text">
                 <h1>Sticks Trading</h1>
                 <p>Performance Dashboard</p>
@@ -608,13 +609,14 @@
                 <span id="lastUpdate">Last update: Loading...</span>
             </div>
             <button class="refresh-btn" onclick="loadData()">
+                <span></span>
                 <span>Refresh</span>
             </button>
         </div>
     </div>
 
     <div class="strategy-selector">
-        <div class="logo-icon" style="width: 20px; height: 20px; font-size: 12px;">
+        <div class="logo-icon" style="width: 20px; height: 20px; font-size: 12px;"></div>
         <label>Live Paper Trading</label>
         <select>
             <option>Live Paper Trading</option>
@@ -685,7 +687,7 @@
                 <div class="chart-subtitle">Last update: <span id="positionsUpdate">2026-01-07</span></div>
             </div>
             <div class="cash-info">
-                <span class="cash-label"> CASH</span>
+                <span class="cash-label"> CASH:</span>
                 <span class="cash-value" id="cashValue">$87,542.33</span>
             </div>
             <div>
