--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 18px;
+        }
+        
+        .logo-icon svg {
+            width: 20px;
+            height: 20px;
+            fill: white;
         }
 
         .logo-text h1 {
@@ -186,6 +191,7 @@
             border: 1px solid #2a2a2a;
             border-radius: 10px;
             padding: 20px;
+            height: fit-content;
         }
 
         .chart-header {
@@ -204,6 +210,12 @@
         .chart-subtitle {
             font-size: 12px;
             color: #808080;
+        }
+        
+        .chart-wrapper {
+            width: 100%;
+            height: 400px;
+            position: relative;
         }
 
         .positions-container {
@@ -597,7 +609,16 @@
 <body>
     <div class="header">
         <div class="logo">
-            <div class="logo-icon"></div>
+            <div class="logo-icon">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="8" y="2" width="2" height="4"/>
+                    <rect x="6" y="6" width="6" height="8" rx="1"/>
+                    <rect x="8" y="14" width="2" height="8"/>
+                    <rect x="16" y="4" width="2" height="6"/>
+                    <rect x="14" y="10" width="6" height="6" rx="1"/>
+                    <rect x="16" y="16" width="2" height="4"/>
+                </svg>
+            </div>
             <div class="logo-text">
                 <h1>Sticks Trading</h1>
                 <p>Performance Dashboard</p>
@@ -609,14 +630,19 @@
                 <span id="lastUpdate">Last update: Loading...</span>
             </div>
             <button class="refresh-btn" onclick="loadData()">
-                <span></span>
                 <span>Refresh</span>
             </button>
         </div>
     </div>
 
     <div class="strategy-selector">
-        <div class="logo-icon" style="width: 20px; height: 20px; font-size: 12px;"></div>
+        <div class="logo-icon" style="width: 20px; height: 20px;">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="width: 12px; height: 12px;">
+                <rect x="3" y="12" width="4" height="9"/>
+                <rect x="10" y="7" width="4" height="14"/>
+                <rect x="17" y="3" width="4" height="18"/>
+            </svg>
+        </div>
         <label>Live Paper Trading</label>
         <select>
             <option>Live Paper Trading</option>
@@ -668,7 +694,9 @@
                 </div>
                 <div class="chart-subtitle">Cumulative Returns (%)</div>
             </div>
-            <canvas id="equityChart"></canvas>
+            <div class="chart-wrapper">
+                <canvas id="equityChart"></canvas>
+            </div>
             <div class="legend">
                 <div class="legend-item">
                     <div class="legend-color strategy"></div>
@@ -687,7 +715,7 @@
                 <div class="chart-subtitle">Last update: <span id="positionsUpdate">2026-01-07</span></div>
             </div>
             <div class="cash-info">
-                <span class="cash-label"> CASH:</span>
+                <span class="cash-label">CASH:</span>
                 <span class="cash-value" id="cashValue">$87,542.33</span>
             </div>
             <div>
@@ -950,7 +978,7 @@
                         <div class="position-header">
                             <span class="position-ticker">${ticker}</span>
                             <span class="position-badge ${position.side === 1 ? 'long' : 'short'}">
-                                ${position.side === 1 ? '↗ Long' : '↘ Short'}
+                                ${position.side === 1 ? 'Long' : 'Short'}
                             </span>
                         </div>
                         <div class="position-details">
@@ -1025,7 +1053,13 @@
                             label: 'Strategy',
                             data: strategyData,
                             borderColor: '#00d4aa',
-                            backgroundColor: 'rgba(0, 212, 170, 0.1)',
+                            backgroundColor: function(context) {
+                                const ctx = context.chart.ctx;
+                                const gradient = ctx.createLinearGradient(0, 0, 0, 400);
+                                gradient.addColorStop(0, 'rgba(0, 212, 170, 0.2)');
+                                gradient.addColorStop(1, 'rgba(0, 212, 170, 0)');
+                                return gradient;
+                            },
                             borderWidth: 2,
                             fill: true,
                             tension: 0.4,
@@ -1047,8 +1081,7 @@
                 },
                 options: {
                     responsive: true,
-                    maintainAspectRatio: true,
-                    aspectRatio: 2.5,
+                    maintainAspectRatio: false,
                     plugins: {
                         legend: {
                             display: false
@@ -1095,8 +1128,9 @@
                                     size: 11
                                 },
                                 callback: function(value) {
-                                    return value + '%';
-                                }
+                                    return value.toFixed(1) + '%';
+                                },
+                                maxTicksLimit: 8
                             }
                         }
                     },
