--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
                             borderColor: '#ff9f43',
                             backgroundColor: 'transparent',
                             borderWidth: 2,
-                            fill: false,
+                            fill: True,
                             tension: 0.4,
                             pointRadius: 0,
                             pointHoverRadius: 4
