--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
             </select>
             <div class="commit-info">
                 <span style="color: #00d4aa;">Status: OK</span>
-                <span style="margin-left: 15px;">Commit: <span id="commitHash">Enhanced</span></span>
+                <span style="margin-left: 15px;">Commit: <span id="commitHash">4a14ec1</span></span>
             </div>
         </div>
 
